--- a/fitness/css/styles.css
+++ b/fitness/css/styles.css
@@ -11,7 +11,7 @@ body, header, nav, main, footer, h1, div, img {
     border: 0;
 }
 
-?*Style rules for body and images */
+/*Style rules for body and images */
 body {
     background-color: #000;
 }
