--- a/fitness/css/styles.css
+++ b/fitness/css/styles.css
@@ -5,7 +5,7 @@ File name: styles.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, h1, div, img {
+body, header, nav, main, footer, h1, div, img, ul {
     margin: 0;
     padding: 0;
     border: 0;
@@ -21,45 +21,56 @@ img {
     display: block;
 }
 
+/* Style rules for mobile viewport */
 /* Style rule for header */
 header {
-    width: 25%;
-    float: left;
+   position: -webkit-sticky;
+   position: sticky;
+   top: 0;
+   background-color: #000;
+   height: 190px;
     }
+
+header img {
+    margin: 0 auto;
+}
 
 /* Style rules for navigation area */    
 nav {
-    width: 70%;
-    float: right;
-    margin: 5em 3em 0 0;
+    padding: 1%;
+    margin-bottom: 1%;
+   }  
 }  
+   }  
+
 nav ul {
     list-style-type: none;
-    margin: 0;
-    text-align: right;
+    text-align: center;
 } 
 
 nav li {
-    display: inline-block;
     font-size: 1.5em;
-    font-family: Verdana, Arial, sans-serif;
-    font-weight: bold;
+    font-family: 'Francois One', sans-serif;
+    border-top: 1px solid #fff;
+}
+
+nav li:first-child {
+    border-top: none;
 }
 
 nav li a {
     display: block;
     color: #fff;
-    text-align: center;
     padding: 0.5em 1em;
     text-decoration: none;
 }
 
 /* Style rules for main content */
 main {
-    clear: left;
     background-color: #fff;
     padding: 2%;
     font-size: 1.25em;
+    font-family: 'Robo Slab', serif;
 }
 
 .action {
