--- a/fitness/css/styles.css
+++ b/fitness/css/styles.css
@@ -224,7 +224,7 @@ footer p a {
     /* Desktop Viewport: Style rules for nav area */
     nav {
         float: right;
-        width 70%;
+        width: 70%;
         margin: 4em 1em 0 0;
     }
 
