--- a/fitness/css/styles.css
+++ b/fitness/css/styles.css
@@ -251,7 +251,7 @@ footer p a {
     }
 
     main h1 {
-        font-size 1.8em;
+        font-size: 1.8em;
     }
 
     #weights, #cardio, #training {
