More changes ch 6

--- a/fitness/css/styles.css
+++ b/fitness/css/styles.css
@@ -161,7 +161,7 @@ footer p a {
     /* Tablet Viewport: Style rule for header */
     header {
         position: static;
-        padding-bottom: 2%
+        padding-bottom: 2%;
     }
 
     /* Tablet Viewport: Style rules for nav area */
